# SpectralSuite

./: .dockerignore  .editorconfig  .gitignore  CHANGES.md  CMakeLists.txt  Dockerfile  NOTICE.txt  README.md  auValidate.sh  buildLinux.sh  buildUnix.sh  makeSpectral.py  moveReleaseFiles.sh  win-moveReleaseFiles.ps1
Bin Scrambler.vst3/Contents/: Info.plist
BinScrambler/: BinScramble.jucer  CMakeLists.txt
BinScrambler/Builds/MacOSX/: Info-AU.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
BinScrambler/Builds/MacOSX/Bin Scrambler.xcodeproj/: project.pbxproj
BinScrambler/Builds/MacOSX/Bin Scrambler.xcodeproj/xcshareddata/xcschemes/: Bin Scrambler - AU.xcscheme  Bin Scrambler - VST3.xcscheme
BinScrambler/Builds/VisualStudio2022/: Bin Scrambler.sln  Bin Scrambler_SharedCode.vcxproj  Bin Scrambler_SharedCode.vcxproj.filters  Bin Scrambler_VST3.vcxproj  Bin Scrambler_VST3.vcxproj.filters  Bin Scrambler_VST3ManifestHelper.vcxproj  resources.rc
BinScrambler/Source/: BinScramblerAudioPlugin.cpp  BinScramblerAudioPlugin.h  BinScramblerFFTProcessor.cpp  BinScramblerFFTProcessor.h  BinScramblerInteractor.cpp  BinScramblerInteractor.h  BinScramblerParameters.cpp  BinScramblerParameters.h  BinScramblerProcessor.cpp  BinScramblerProcessor.h  RateSlider.cpp  RateSlider.h  ScatterSlider.cpp  ScatterSlider.h  ScrambleAmount.cpp  ScrambleSlider.cpp  ScrambleSlider.h  SliderContainer.cpp  SliderContainer.h
FrequencyMagnet/: CMakeLists.txt  FrequencyMagnet.jucer
FrequencyMagnet-8k/: FrequencyMagnet.jucer
FrequencyMagnet-8k/Source/: BiasSlider.h  FreqSlider.h  FrequencyMagnetAudioPlugin.h  FrequencyMagnetFFTProcessor.cpp  FrequencyMagnetInteractor.cpp  FrequencyMagnetInteractor.h  FrequencyMagnetParameters.cpp  PitchInfoParser.cpp  PitchInfoParser.h  SliderContainer.h
FrequencyMagnet/Source/: BiasSlider.cpp  BiasSlider.h  FreqSlider.cpp  FreqSlider.h  FrequencyMagnetAudioPlugin.cpp  FrequencyMagnetAudioPlugin.h  FrequencyMagnetFFTProcessor.cpp  FrequencyMagnetFFTProcessor.h  FrequencyMagnetInteractor.cpp  FrequencyMagnetInteractor.h  FrequencyMagnetParameters.cpp  FrequencyMagnetParameters.h  FrequencyMagnetProcessor.cpp  FrequencyMagnetProcessor.h  PitchInfoParser.cpp  PitchInfoParser.h  SliderContainer.cpp  SliderContainer.h  WidthSlider.cpp  WidthSlider.h  test.sh  testParser.cpp
FrequencyShift/: CMakeLists.txt  FrequencyShift.jucer
FrequencyShift/Source/: FrequencyShiftAudioPlugin.cpp  FrequencyShiftAudioPlugin.h  FrequencyShiftFFTProcessor.cpp  FrequencyShiftFFTProcessor.h  FrequencyShiftInteractor.cpp  FrequencyShiftInteractor.h  FrequencyShiftPluginParameters.cpp  FrequencyShiftPluginParameters.h  FrequencyShiftProcessor.cpp  FrequencyShiftProcessor.h  FrequencySlider.cpp  FrequencySlider.h  ScaleSlider.cpp  ScaleSlider.h  SliderContainer.cpp  SliderContainer.h
Morph/: CMakeLists.txt  Morph.jucer
Morph/Builds/MacOSX/: Info-AU.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
Morph/Builds/MacOSX/Morph.xcodeproj/: project.pbxproj
Morph/Builds/MacOSX/Morph.xcodeproj/xcshareddata/xcschemes/: Morph - AU.xcscheme  Morph - VST3.xcscheme
Morph/Builds/VisualStudio2022/: Morph.sln  Morph_SharedCode.vcxproj  Morph_SharedCode.vcxproj.filters  Morph_VST3.vcxproj  Morph_VST3ManifestHelper.vcxproj  resources.rc
Morph/Source/: ControlPoints.h  MorphAudioPlugin.cpp  MorphAudioPlugin.h  MorphFFTProcessor.cpp  MorphFFTProcessor.h  MorphInteractor.cpp  MorphInteractor.h  MorphPluginParameters.cpp  MorphPluginParameters.h  MorphSlider.cpp  MorphSlider.h
NewThing/: Base.jucer  NEWNAME.jucer  NEWNAMEAudioPlugin.cpp  NEWNAMEAudioPlugin.h  NEWNAMEParameters.cpp  NEWNAMEParameters.h  NEWNAMEProcessor.cpp  NEWNAMEProcessor.h  NewThing.jucer  NewThingAudioPlugin.cpp  NewThingAudioPlugin.h  NewThingParameters.cpp  NewThingParameters.h  NewThingProcessor.cpp  NewThingProcessor.h  UiContainer.cpp  UiContainer.h
PhaseLock/: CMakeLists.txt  PhaseLock.jucer
PhaseLock/Source/: ControlPointComponent.cpp  ControlPointComponent.h  LockState.cpp  LockState.h  PhaseLockAudioPlugin.cpp  PhaseLockAudioPlugin.h  PhaseLockFFTProcessor.cpp  PhaseLockFFTProcessor.h  (+9 more)
Playground/: Playground.jucer  PlaygroundAudioPlugin.cpp  PlaygroundAudioPlugin.h  PlaygroundFFTProcessor.cpp  PlaygroundFFTProcessor.h  PlaygroundParameters.cpp  PlaygroundParameters.h  PlaygroundProcessorInteractor.cpp  PlaygroundProcessorInteractor.h  UiContainer.cpp  UiContainer.h
Release/: Bin Scrambler.vst3  Frequency Magnet.vst3  FrequencyShifter.vst3  Sinusoidal Shaped Filter.vst3  Spectral Gate.vst3
Sinusoidal Shaped Filter/: SSF.jucer
SinusoidalShapedFilter/: CMakeLists.txt  SSF.jucer
SpectralGate/: CMakeLists.txt  SpectralGate.jucer
SpectralSuite.xcworkspace/: contents.xcworkspacedata
SpectralSuiteBuild/: Base.jucer  BaseAudioPlugin.cpp  BaseParameters.cpp  BaseProcessor.cpp  BaseProcessor.h  PACKAGE_README.html  SpectralSuitePackager.pkgproj  SpectralSuitePackager.pkgproj.template  UiContainer.h  build.ps1  buildLinux.sh  pre-install-au.sh  pre-install-vst3.sh  readme-package.rtf  ssutil.ps1  ssutil.rb
Testing/: TestingTemplate.md  v2-1-11.md  v2-1-12.md  v2-2-0.md
cmake/: cpm.cmake
shared/: AboutPage.cpp  AboutPage.h  AudioValueTreeOnLoadListener.h  EditorParameterContainer.cpp  EditorParameterContainer.h  FftChoiceAdapter.cpp  FftChoiceAdapter.h  FftInteractor.cpp  FftOverlapsChoiceAdapter.cpp  FftOverlapsChoiceAdapter.h  FftSizeChoiceAdapter.cpp  FftSizeChoiceAdapter.h  FftStyleChoiceAdapter.cpp  FftStyleChoiceAdapter.h  FftSwitcher.cpp  FftSwitcher.h  FftThread.cpp  FftThread.h  FftWindowChoiceAdapter.cpp  FftWindowChoiceAdapter.h  FftWindowType.h  ParameterComponentFactory.h  ParameterContainerComponent.cpp  ParameterContainerComponent.h  ParameterContainerComponentFactory.h  PhaseBuffer.h  PhaseVocoder.cpp  PhaseVocoder.h  PluginEditor.cpp  PluginEditor.h  PluginParameters.cpp  PluginParameters.h  Polar.cpp  Polar.h  ResourceRepository.cpp  ResourceRepository.h  SettingsPage.cpp  SettingsPage.h  SpectralAudioPlugin.cpp  SpectralAudioPlugin.h  (+25 more)
spectral-suite/: README.md  spectral-suite.sln
(+162 files in other folders)
